@@ -31,6 +31,9 @@ Version 1.4.7 - CVS
     characters. Moved html sanitizing from backend functions to display 
     code. Removed direct access to $_GET and $_POST variables and 
     simplified form variable processing.
+  - Fixed some mailbox caching issues, when messages are deleted or moved 
+    not in first mailbox page. Fixed use of mailbox cache in right_main.php 
+    (#1304408).
 
 Version 1.4.6 - 23 February 2006
 --------------------------------
